ir: 	- fix soft_poweroff action 	- add osd_select action

--- a/cfg/openrelease_keymap.cfg
+++ b/cfg/openrelease_keymap.cfg
@@ -3,6 +3,7 @@
 # - K_<KEY> - defautl action for key <KEY>
 # - screen_mute - switch off screen
 # - soft_poweroff - switch off screen + lock control + volume mute
+# - osd_select - enable/disable osd
 
 K_ENERGY_SAVING = default
 K_POWER = default
