rename cfg/ to etc/ move config related functions to config.c remove log option from config in favour of command line option do automatic config file dispatch in OPENRELEASE shell wrapper:  use one of the following possible config files:  - command line one if specified  - the file located on the first partition of the first usb drive if exists  - /mnt/lg/user/etc/openrelease/openrelease.cfg if exists  - etc/openrelease.cfg if exists some cosmetic chages in usage don't copy example config files to resulting image

--- a/etc/openrelease.cfg
+++ b/etc/openrelease.cfg
@@ -4,11 +4,8 @@ input = /tmp/openrelease.in
 # stdout redirection
 output = /tmp/openrelease.out
 
-# log file
-log = NULL
-
-# keymap config
-keymap = cfg/openrelease_keymap.cfg
+# keymap config (relative to base directory of config file)
+keymap = openrelease_keymap.cfg
 
 # enable/disable divx preview
 enable_divx_preview = 1
