add enable_auto_mount option

--- a/etc/openrelease.cfg
+++ b/etc/openrelease.cfg
@@ -9,3 +9,6 @@ keymap = openrelease_keymap.cfg
 
 # enable/disable divx preview
 enable_divx_preview = 1
+
+# enable/disable auto mount
+enable_auto_mount = 1
