Support for all platforms (Saturn6, Saturn7, Broadcom).  Use LD_PRELOAD mechanism instead of linker '--wrap' one.

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,12 @@ tags
 config.mk
 
 *.o
-librelease/librelease.so
 
-openrelease/openrelease
+librelease/librelease.so
+libopenrelease/libopenrelease.so
+
 release/release
+
 utils/mkcramfs
 utils/sstrip
 
