--- a/etc/openrelease.cfg
+++ b/etc/openrelease.cfg
@@ -1,14 +1,17 @@
+# sym file
+symfile = NULL
+
 # stdin redirection
 input = /tmp/openrelease.in
 
 # stdout redirection
-output = /tmp/openrelease.out
+output = NULL
 
 # keymap config (relative to base directory of config file)
-keymap = openrelease_keymap.cfg
-
-# enable/disable divx preview
-enable_divx_preview = 1
+keymap = NULL
 
 # enable/disable auto mount
 enable_auto_mount = 1
+
+# enable/disable divx preview
+enable_divx_preview = 1
