--- a/etc/openrelease_keymap.cfg
+++ b/etc/openrelease_keymap.cfg
@@ -1,6 +1,7 @@
 # Possible values are:
 # - default - default action
 # - K_<KEY> - defautl action for key <KEY>
+# - K-X<KEY_CODE> - key with keycode (<KEYCODE> in hex: for example AA)
 # - screen_mute - switch off screen
 # - soft_poweroff - switch off screen + lock control + volume mute
 # - osd_select - enable/disable osd
