etc/openrelease_keymap.cfg: add missing defaults

--- a/etc/openrelease_keymap.cfg
+++ b/etc/openrelease_keymap.cfg
@@ -49,3 +49,18 @@ K_T_OPT = default
 K_SUBTITLE = default
 K_SIMPLINK = default
 K_FREEZE = default
+K_NETCAST = default
+K_EXIT = default
+K_STOP = default
+K_PLAY = default
+K_PAUSE = default
+K_FORWARD = default
+K_BACKWARD = default
+K_AD = default
+K_TILT = default
+K_IN_STOP = default
+K_IN_START = default
+K_P_CHECK = default
+K_S_CHECK = default
+K_POWERONLY = default
+K_EZ_ADJUST = default
