etc/openrelease.cfg: add missed defaults.

--- a/etc/openrelease.cfg
+++ b/etc/openrelease.cfg
@@ -7,6 +7,12 @@ input = /tmp/openrelease.in
 # stdout redirection
 output = NULL
 
+# ipaddr for debug service
+debug_ipaddr = NULL
+
+# port for debug service
+debug_port = 0
+
 # keymap config (relative to base directory of config file)
 keymap = NULL
 
