openrelease_keymap.cfg: add additional actions: `vos4_select' and `games menu'.

--- a/etc/openrelease_keymap.cfg
+++ b/etc/openrelease_keymap.cfg
@@ -6,6 +6,8 @@
 # - screen_mute - switch off screen
 # - soft_poweroff - switch off screen + lock control + volume mute
 # - osd_select - enable/disable osd
+# - vosd4_select - enable/disable vosd4 (BCM and SATURN7 only)
+# - games_menu - open games menu (SATURN7 only)
 
 K_ENERGY_SAVING = default
 K_POWER = default
