- Fix compilation for SATURN6. - Some stylistic changes. - Add new parameters (`debug_state' and `poweroff_script') to `etc/openrelease.cfg' example.

--- a/etc/openrelease.cfg
+++ b/etc/openrelease.cfg
@@ -21,3 +21,9 @@ enable_auto_mount = 1
 
 # enable/disable divx preview
 enable_divx_preview = 1
+
+# script to be executed before poweroff
+poweroff_script = NULL
+
+# RELEASE debug state (BCM and SATURN7 only)
+debug_state = EVENT
